--- a/index.html
+++ b/index.html
@@ -2,48 +2,253 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Penguin Fashion</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Penguin Fashion</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <main>
-        <header class="container">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="#">
-                        <img src="Logo, Icon/Group 33072.png" alt="">
-                      </a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                          <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </nav>
-        </header>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
+  <main>
+    <header style="background-color: rgb(248, 236, 222);">
+      <section class="container">
+        <nav class="navbar navb navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <div class="col-md-6">
+              <a class="navbar-brand" href="#">
+                <img src="Logo, Icon/Group 33072.png" alt="">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Product</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </section>
+      <section class="container company" style="background-color: rgb(248, 236, 222);">
+        <div class="row">
+          <div class="col-md-6 company-intro">
+            <h1><span class="tagline">BE THE PENGUIN</span> <span class="tagline1">OF WINTER</span></h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <button class="btn btn-success intro-button">
+              <img src="Logo, Icon/shopping-cart 1.png" alt="">Buy Now</button>
+          </div>
+          <div class="col-md-6 company-intro1 mx-auto">
+            <img src="image/green.png" alt="">
+          </div>
+        </div>
+      </section>
+    </header>
+    <section class="container mt-5 woman-section">
+      <h1 style="color:rgb(27, 27, 97)">WOMAN JACKET</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
+        <div class="col">
+          <div class="card h-100 shadow women">
+            <img src="image/SeekPng 1.png" class="card-img-top women-cloth" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">orange Coat Jacket</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="card-footer d-flex justify-content-between" style="margin-top: 0; background-color: white;">
+              <h1>$234</h1>
+              <button class="btn btn-success intro-button">
+                <img src="Logo, Icon/shopping-cart 1.png" alt="">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow women">
+            <img src="image/PngItem_2597366 1.png" class="card-img-top women-cloth" style="padding:5% 20%" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Ladies Jacket</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="card-footer d-flex justify-content-between" style="margin-top: 0; background-color: white;">
+              <h1>$234</h1>
+              <button class="btn btn-success intro-button">
+                <img src="Logo, Icon/shopping-cart 1.png" alt="">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow women">
+            <img src="image/image 15.png" class="card-img-top women-cloth" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Woman Leather Jacket</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="card-footer d-flex justify-content-between" style="margin-top: 0; background-color: white;">
+              <h1>$234</h1>
+              <button class="btn btn-success intro-button">
+                <img src="Logo, Icon/shopping-cart 1.png" alt="">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container mt-5 woman-section">
+      <h1 style="color:rgb(27, 27, 97)">MAN JACKET</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
+        <div class="col">
+          <div class="card h-100 shadow women">
+            <img src="image/image 11.png" class="card-img-top women-cloth" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Snowboard Jacket Mens</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="card-footer d-flex justify-content-between" style="margin-top: 0; background-color: white;">
+              <h1>$234</h1>
+              <button class="btn btn-success intro-button">
+                <img src="Logo, Icon/shopping-cart 1.png" alt="">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow women">
+            <img src="image/vippng 1.png" class="card-img-top women-cloth" style="padding:5% 10%" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Man Leather Jackets</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="card-footer d-flex justify-content-between" style="margin-top: 0; background-color: white;">
+              <h1>$234</h1>
+              <button class="btn btn-success intro-button">
+                <img src="Logo, Icon/shopping-cart 1.png" alt="">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow women">
+            <img src="image/toppng 1.png" class="card-img-top women-cloth" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Man Casual Jackets</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="card-footer d-flex justify-content-between" style="margin-top: 0; background-color: white;">
+              <h1>$234</h1>
+              <button class="btn btn-success intro-button">
+                <img src="Logo, Icon/shopping-cart 1.png" alt="">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container mt-5 overflow-hidden ">
+      <div class="row mt-5 d-flex flex-md-row-reverse last-content align-items-center">
+        <div class="col-md-7 last-image d-block ">
+          <img  class="rounded mx-auto" style="width:100%; margin-top:80px;" src="Logo, Icon/XMLID 1.png" alt="">
+        </div>
+        <div class="col-md-5 mt-5 text-center text-lg-start pt-5">
+          <div class="shadow p-3 mb-5 bg-white rounded d-flex">
+            <div>
+              <img clss="mx-auto d-block" style="width:60%" src="Logo, Icon/image 12.png" alt="">
+            </div>
+            <div>
+              <h4>Find the Perfect Fit</h4>
+              <p>Everybody is different, which is why we offer styles for every body.</p>
+            </div>
+          </div>
+          <div class="shadow p-3 mb-5 bg-white rounded p-3 d-flex">
+            <div>
+              <img style="width:60%" src="Logo, Icon/image 13.png" alt="">
+            </div>
+            <div>
+              <h4>Free Exchanges</h4>
+              <p>One of the many reasons you can shop with peace of mind.</p>
+            </div>
+          </div>
+          <div class="shadow p-3 mb-5 bg-white rounded d-flex">
+            <div>
+              <img style="width:60%" src="Logo, Icon/image 14.png" alt="">
+            </div>
+            <div>
+              <h4>Contact Our Seller</h4>
+              <p>They are here to help you. That's quite literally what we pay them for.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section style="background-color: lightblue; height:400px">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+          <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+          <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="image/Ellipse-1.png" class="d-block w-25 mt-4" style="margin:auto;" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="mt-5">CEO</h5>
+              <p>Delawar Hossain</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="image/Ellipse-2.png" class="d-block w-25 mt-4" style="margin:auto;" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>CTO</h5>
+              <p>Jahid Hasan Anik</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="image/Ellipse.png" class="d-block w-25 mt-4" style="margin:auto;" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>CFO</h5>
+              <p>Iftekhar Uddin Rishad</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </a>
+      </div>
+    </section>
+  </main>
+  <footer class="mt-5" style="width:400px; margin:auto;">
+    <h4 class="text-center">Stay In Touch</h4>
+    <div class="mb-3">
+      <label for="formGroupExampleInput" class="form-label">Feedback</label>
+      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your Feedback">
+    </div>
+    <div class="mb-3">
+      <label for="formGroupExampleInput2" class="form-label">Email</label>
+      <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Type your email Address">
+    </div>
+    <h5 class="text-center">You can reach us at <a href="isratjahanruna6@gmail.com">Example@gmail.com</a></h5>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
