--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
 </head>
 
 <body>
+
+  <!-- main started -->
+
   <main>
+
+    <!-- header started -->
+
     <header style="background-color: rgb(248, 236, 222);">
       <section class="container">
+
+        <!-- nav started -->
+
         <nav class="navbar navb navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <div class="col-md-6">
@@ -49,6 +58,8 @@
           </div>
         </nav>
       </section>
+
+      <!-- company intro started -->
       <section class="container company" style="background-color: rgb(248, 236, 222);">
         <div class="row">
           <div class="col-md-6 company-intro">
@@ -63,7 +74,12 @@
         </div>
       </section>
     </header>
-    <section class="container mt-5 woman-section">
+
+    <!-- header closed -->
+
+    <!-- women-part started -->
+
+    <section class="container mt-5 woman-section overflow-hidden">
       <h1 style="color:rgb(27, 27, 97)">WOMAN JACKET</h1>
       <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
         <div class="col">
@@ -110,7 +126,10 @@
         </div>
       </div>
     </section>
-    <section class="container mt-5 woman-section">
+
+    <!-- man-part started -->
+
+    <section class="container mt-5 woman-section overflow-hidden">
       <h1 style="color:rgb(27, 27, 97)">MAN JACKET</h1>
       <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
         <div class="col">
@@ -157,10 +176,13 @@
         </div>
       </div>
     </section>
+
+    <!-- last-part started -->
+
     <section class="container mt-5 overflow-hidden ">
       <div class="row mt-5 d-flex flex-md-row-reverse last-content align-items-center">
         <div class="col-md-7 last-image d-block ">
-          <img  class="rounded mx-auto" style="width:100%; margin-top:80px;" src="Logo, Icon/XMLID 1.png" alt="">
+          <img class="rounded mx-auto" style="width:100%; margin-top:80px;" src="Logo, Icon/XMLID 1.png" alt="">
         </div>
         <div class="col-md-5 mt-5 text-center text-lg-start pt-5">
           <div class="shadow p-3 mb-5 bg-white rounded d-flex">
@@ -193,6 +215,8 @@
         </div>
       </div>
     </section>
+    <!-- extra-part started -->
+
     <section style="background-color: lightblue; height:400px">
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
@@ -234,6 +258,10 @@
       </div>
     </section>
   </main>
+
+  <!-- main-part started -->
+  <!-- footer started -->
+
   <footer class="mt-5" style="width:400px; margin:auto;">
     <h4 class="text-center">Stay In Touch</h4>
     <div class="mb-3">
@@ -246,6 +274,9 @@
     </div>
     <h5 class="text-center">You can reach us at <a href="isratjahanruna6@gmail.com">Example@gmail.com</a></h5>
   </footer>
+
+  <!-- footer closed -->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
