--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <img src="Logo, Icon/shopping-cart 1.png" alt="">Buy Now</button>
           </div>
           <div class="col-md-6 company-intro1 mx-auto">
-            <img src="image/green.png" alt="">
+            <img src="Image/green.png" alt="">
           </div>
         </div>
       </section>
@@ -84,7 +84,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
         <div class="col">
           <div class="card h-100 shadow women">
-            <img src="image/SeekPng 1.png" class="card-img-top women-cloth" alt="...">
+            <img src="Image/SeekPng 1.png" class="card-img-top women-cloth" alt="...">
             <div class="card-body">
               <h4 class="card-title">orange Coat Jacket</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -98,7 +98,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow women">
-            <img src="image/PngItem_2597366 1.png" class="card-img-top women-cloth" style="padding:5% 20%" alt="...">
+            <img src="Image/PngItem_2597366 1.png" class="card-img-top women-cloth" style="padding:5% 20%" alt="...">
             <div class="card-body">
               <h4 class="card-title">Ladies Jacket</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -112,7 +112,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow women">
-            <img src="image/image 15.png" class="card-img-top women-cloth" alt="...">
+            <img src="Image/Image 15.png" class="card-img-top women-cloth" alt="...">
             <div class="card-body">
               <h4 class="card-title">Woman Leather Jacket</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -134,7 +134,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
         <div class="col">
           <div class="card h-100 shadow women">
-            <img src="image/image 11.png" class="card-img-top women-cloth" alt="...">
+            <img src="Image/Image 11.png" class="card-img-top women-cloth" alt="...">
             <div class="card-body">
               <h4 class="card-title">Snowboard Jacket Mens</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -148,7 +148,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow women">
-            <img src="image/vippng 1.png" class="card-img-top women-cloth" style="padding:5% 10%" alt="...">
+            <img src="Image/vippng 1.png" class="card-img-top women-cloth" style="padding:5% 10%" alt="...">
             <div class="card-body">
               <h4 class="card-title">Man Leather Jackets</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -162,7 +162,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow women">
-            <img src="image/toppng 1.png" class="card-img-top women-cloth" alt="...">
+            <img src="Image/toppng 1.png" class="card-img-top women-cloth" alt="...">
             <div class="card-body">
               <h4 class="card-title">Man Casual Jackets</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -181,13 +181,13 @@
 
     <section class="container mt-5 overflow-hidden ">
       <div class="row mt-5 d-flex flex-md-row-reverse last-content align-items-center">
-        <div class="col-md-7 last-image d-block ">
+        <div class="col-md-7 last-Image d-block ">
           <img class="rounded mx-auto" style="width:100%; margin-top:80px;" src="Logo, Icon/XMLID 1.png" alt="">
         </div>
         <div class="col-md-5 mt-5 text-center text-lg-start pt-5">
           <div class="shadow p-3 mb-5 bg-white rounded d-flex">
             <div>
-              <img clss="mx-auto d-block" style="width:60%" src="Logo, Icon/image 12.png" alt="">
+              <img clss="mx-auto d-block" style="width:60%" src="Logo, Icon/Image 12.png" alt="">
             </div>
             <div>
               <h4>Find the Perfect Fit</h4>
@@ -196,7 +196,7 @@
           </div>
           <div class="shadow p-3 mb-5 bg-white rounded p-3 d-flex">
             <div>
-              <img style="width:60%" src="Logo, Icon/image 13.png" alt="">
+              <img style="width:60%" src="Logo, Icon/Image 13.png" alt="">
             </div>
             <div>
               <h4>Free Exchanges</h4>
@@ -205,7 +205,7 @@
           </div>
           <div class="shadow p-3 mb-5 bg-white rounded d-flex">
             <div>
-              <img style="width:60%" src="Logo, Icon/image 14.png" alt="">
+              <img style="width:60%" src="Logo, Icon/Image 14.png" alt="">
             </div>
             <div>
               <h4>Contact Our Seller</h4>
@@ -226,21 +226,21 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="image/Ellipse-1.png" class="d-block w-25 mt-4" style="margin:auto;" alt="...">
+            <img src="Image/Ellipse-1.png" class="d-block w-25 mt-4" style="margin:auto;" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="mt-5">CEO</h5>
               <p>Delawar Hossain</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="image/Ellipse-2.png" class="d-block w-25 mt-4" style="margin:auto;" alt="...">
+            <img src="Image/Ellipse-2.png" class="d-block w-25 mt-4" style="margin:auto;" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>CTO</h5>
               <p>Jahid Hasan Anik</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="image/Ellipse.png" class="d-block w-25 mt-4" style="margin:auto;" alt="...">
+            <img src="Image/Ellipse.png" class="d-block w-25 mt-4" style="margin:auto;" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>CFO</h5>
               <p>Iftekhar Uddin Rishad</p>
