--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <div class="col">
           <div class="card h-100 shadow women">
-            <img src="Image/Image 15.png" class="card-img-top women-cloth" alt="...">
+            <img src="Image/image 15.png" class="card-img-top women-cloth" alt="...">
             <div class="card-body">
               <h4 class="card-title">Woman Leather Jacket</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -134,7 +134,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
         <div class="col">
           <div class="card h-100 shadow women">
-            <img src="Image/Image 11.png" class="card-img-top women-cloth" alt="...">
+            <img src="Image/image 11.png" class="card-img-top women-cloth" alt="...">
             <div class="card-body">
               <h4 class="card-title">Snowboard Jacket Mens</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
