--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="col-md-5 mt-5 text-center text-lg-start pt-5">
           <div class="shadow p-3 mb-5 bg-white rounded d-flex">
             <div>
-              <img clss="mx-auto d-block" style="width:60%" src="Logo, Icon/Image 12.png" alt="">
+              <img clss="mx-auto d-block" style="width:60%" src="Logo, Icon/image 12.png" alt="">
             </div>
             <div>
               <h4>Find the Perfect Fit</h4>
@@ -196,7 +196,7 @@
           </div>
           <div class="shadow p-3 mb-5 bg-white rounded p-3 d-flex">
             <div>
-              <img style="width:60%" src="Logo, Icon/Image 13.png" alt="">
+              <img style="width:60%" src="Logo, Icon/image 13.png" alt="">
             </div>
             <div>
               <h4>Free Exchanges</h4>
@@ -205,7 +205,7 @@
           </div>
           <div class="shadow p-3 mb-5 bg-white rounded d-flex">
             <div>
-              <img style="width:60%" src="Logo, Icon/Image 14.png" alt="">
+              <img style="width:60%" src="Logo, Icon/image 14.png" alt="">
             </div>
             <div>
               <h4>Contact Our Seller</h4>
